<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Activity_PanelBase">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_MTV_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/general_margin"
        android:text="@string/app_name"
        android:textColor="@color/title_color"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/main_SIV_main_img"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_centerInParent="true"
        android:layout_below="@id/main_MTV_title"
        android:layout_marginTop="@dimen/xsmall_margin"
        android:layout_above="@id/main_LLC_center_info_layout"
        android:scaleType="centerCrop"
        android:src="@drawable/main_image" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/main_LLC_center_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/general_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/main_LLC_use_days_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/main_LLC_using_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/xsmall_margin"
                android:background="@drawable/frame_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/xsmall_margin">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_MTV_counter_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/xsmall_margin"
                    android:text="@string/counter"
                    android:textColor="@color/black"
                    android:textSize="@dimen/subTitle_size"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_MTV_use_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_counter"
                    android:textColor="@color/black"
                    android:textSize="@dimen/subTitle_size"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/main_LLC_day_past_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/xsmall_margin">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_MTV_days_passed_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/xsmall_margin"
                    android:gravity="center"
                    android:text="@string/days_pass"
                    android:textColor="@color/black"
                    android:textSize="@dimen/subTitle_size"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_MTV_days_passed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_days"
                    android:textColor="@color/black"
                    android:textSize="@dimen/subTitle_size"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/main_LLC_avg_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xsmall_margin"
            android:background="@drawable/frame_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/xsmall_margin">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/main_MTV_avg_use_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/xsmall_margin"
                android:text="@string/average"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/main_MTV_avg_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_avg"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/main_MTV_avg_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg_of"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_BTN_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_above="@id/main_BTN_reset"
        android:text="@string/add"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_BTN_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/reset"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />
</RelativeLayout>